<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:padding="20dp"
                                             android:background="@drawable/modal_dialog"
>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/TitleText"
              android:maxLines="1"
              android:id="@+id/titleText"
              android:text="@string/name_change"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
    />

    <EditText android:layout_width="0dp"
              android:layout_height="match_parent"
              android:id="@+id/newName"
              android:textSize="@dimen/small_text_size"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/titleText"
              android:maxLines="1"
              android:maxLength="12"
              android:inputType="text"
              android:imeOptions="flagNoExtractUi"
              android:longClickable="false"
              android:textSelectHandle="@drawable/empty"
    />

    <Button style="@style/MenuButtonStyle"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/newName"
            app:layout_constraintLeft_toLeftOf="parent"

    />

    <Button style="@style/MenuButtonStyle"
            android:text="@string/ok"
            android:id="@+id/okButton"
            app:layout_constraintTop_toBottomOf="@id/newName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cancelButton"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginStart="@dimen/dialog_button_margin"
    />

</android.support.constraint.ConstraintLayout>